# Krish

./: LICENSE  README.md  app.py  auth.py  crop_model.pkl  data_sources.py  llm.py  login.py  predictor.py  pyproject.toml  requirements.txt  tomato_embeddings.npy  utils.py  voice_pipeline.py  voiceassit.py
