[project]
name = "new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=14.4.0",
    "groq>=0.31.1",
    "gtts>=2.5.4",
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.7",
    "numpy>=2.2.6",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "piper-tts>=1.3.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "pywin32>=311",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
    "streamlit-audiorec>=0.1.3",
    "streamlit-geolocation>=0.0.10",
    "streamlit-webrtc>=0.63.4",
]
